external-crates/move/crates/move-compiler/tests/move_check/parser/let_binding_missing_semicolon.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/let_binding_missing_semicolon.move:4:5
  │
4 │     }
  │     ^
  │     │
  │     Unexpected '}'
  │     Expected ';'
