external-crates/move/crates/move-compiler/tests/move_check/parser/let_binding_missing_semicolon.move
module 0x42::M {
    fun f() {
        let _x // Test a missing semicolon
    }
}
